--- a/src/Scss/_login.scss
+++ b/src/Scss/_login.scss
@@ -1,30 +1,31 @@
 .login-container {
-	height:100%;
-	width: 100%;
-
-	position: relative;
+   width: 100%;
+   height: 100%;
    display: flex;
 }
 .left-container {
+   position: relative;
 	height: 100%;
 	padding: 69px;
+   // width: 30%;
 
-	// display: flex;
 	justify-content: center;
 	align-items: flex-start;
+   
 }
 .right-container{
 	position: relative;
 	right: 0;
 
-	width: 60%;
-	height: 100%;
+	width:60%;
+	height:100%;
 
-	img {
-		height: 100%;
-		width: 100%;
+	&-img {
+      // margin: auto;
+		height:100%;
+		width:100%;
 		object-fit: cover;
-	}
+	 }
 }
 .name_logo{
    width: 100%;
@@ -42,40 +43,39 @@
          display: flex;
          flex-direction: column;
          justify-content: center;
-   
          width: 100%;
       }
       &__input-label {
          font-size: 16px;
-         // font-family: $font--semibold;
          line-height: 24px;
          letter-spacing: 0.03em;
    
          margin-bottom: 10px;
       }
       &__input {
-         // height: 3rem;
+         align-items: center;
          .ant-input-affix-wrapper {
-            display: block;
             align-items: center;
             border-radius: 8px;
             display: flex;
-            &:hover {
-               border: 1px solid #1768b2;
-            }
          }
    
          .ant-input-password {
             height: 100%;
             line-height: 34px;
-            border: 1px solid #dbdbdb !important;
+            
+            
             & > input {
-               border-radius: none !important;
-            //   line-height: 32px !important;
+               border-radius:none !important;
+               &:hover,:focus{
+                  box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2) ;
+               }
+              
             }
    
             input:-webkit-autofill > & {
                background-color: rgb(232, 240, 254) !important;
+               
             }
             input:autofill & {
                background-color: rgb(232, 240, 254) !important;
@@ -87,6 +87,7 @@
          .input-item .ant-select .ant-select-selector {
             line-height: 32px;
             background-color: #ffffff; 
+            border: 1px solid #dbdbdb !important;
          }
       }
    
